[CHORE] 불필요한 파일 삭제

--- a/2D_MMO_Server/.gitignore
+++ b/2D_MMO_Server/.gitignore
@@ -31,6 +31,10 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
+Binary/
+DummyClient/
+GameServer/
+ServerCore/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
