--- a/2D_MMO_Server/DummyClient/DummyClient.vcxproj
+++ b/2D_MMO_Server/DummyClient/DummyClient.vcxproj
@@ -180,6 +180,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\GameServer\PlayerInfo_generated.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
