--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -105,10 +105,13 @@
     <None Include="Assets\UI Toolkit\Default\DefaultDocument.uxml" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+    <None Include="Assets\Resources\MapData\Map_002.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+    <None Include="Assets\Resources\MapData\Map_001.txt" />
     <None Include="Assets\UI Toolkit\Default\DefaultStyle.uss" />
     <None Include="Assets\TextMesh Pro\Shaders\SDFFunctions.hlsl" />
+    <None Include="Assets\Resources\MapData\Map_005.txt" />
     <None Include="Assets\DLL\Google.FlatBuffers.dll" />
     <None Include="Assets\Gif\Super_Retro_Collection\Resources\Prefabs\Player\TestMap.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
@@ -120,10 +123,12 @@
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+    <None Include="Assets\Resources\MapData\Map_003.txt" />
     <None Include="Assets\UI Toolkit\Inventory\InventoryDocument.uxml" />
     <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
     <None Include="Assets\UI Toolkit\Login\LoginDocument.uxml" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+    <None Include="Assets\Resources\MapData\Map_004.txt" />
     <None Include="Assets\UI Toolkit\Login\LoginStyle.uss" />
     <None Include="Assets\Gif\Ruccho\FangAutoTile\Readme.txt" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
