--- a/2D_MMO_Client/Assembly-CSharp-Editor.csproj
+++ b/2D_MMO_Client/Assembly-CSharp-Editor.csproj
@@ -61,6 +61,7 @@
     <Analyzer Include="C:\Program Files\Unity\Hub\Editor\6000.0.23f1\Editor\Data\Tools\Unity.SourceGenerators\Unity.UIToolkit.SourceGenerator.dll" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Editor\MultiBuildAndRun.cs" />
     <Compile Include="Assets\Editor\MapTool.cs" />
   </ItemGroup>
   <ItemGroup>
