[FIX] 클라이언트 플레이어 스폰 동기화 문제

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-2D_MMO_Cient/[Ll]ibrary/
-2D_MMO_Cient/[Tt]emp/
-2D_MMO_Cient/[Oo]bj/
-2D_MMO_Cient/[Bb]uild/
-2D_MMO_Cient/[Bb]uilds/
-2D_MMO_Cient/[Ll]ogs/
-2D_MMO_Cient/[Mm]emoryCaptures/
-2D_MMO_Cient/[Uu]ser[Ss]ettings/
+2D_MMO_Client/[Ll]ibrary/
+2D_MMO_Client/[Tt]emp/
+2D_MMO_Client/[Oo]bj/
+2D_MMO_Client/[Bb]uild/
+2D_MMO_Client/[Bb]uilds/
+2D_MMO_Client/[Ll]ogs/
+2D_MMO_Client/[Mm]emoryCaptures/
+2D_MMO_Client/[Uu]ser[Ss]ettings/
 .vs
 **/.vs
 **/**/.vs
